--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <div class="navbar-right">
       <a href="#">Home</a>
       <a href="#">My courses</a>
+      <a href="#">Make a plan</a>
       <a href="#">Help</a>
-      <button class="signin">Sign In</button>
-      <button class="signup">Sign Up</button>
+      <button class="signin" onclick="location.href='signin.html'">Sign In</button>
+      <button class="signup" onclick="location.href='signup.html'">Sign Up</button>
     </div>
   </nav>
 
