--- a/signup.html
+++ b/signup.html
@@ -7,18 +7,17 @@
   <link rel="stylesheet" href="css/styles1.css">
 </head>
 <body>
-  <div class="hero-section">
-    <div class="hero-content">
-      <h1>Sign Up</h1>
-      <form action="#" method="post">
-        <input type="text" name="name" placeholder="Full Name" required>
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <input type="tel" name="phone" placeholder="+965 12345678" pattern="^\+965[0-9]{8}$" required>
-        <button type="submit" class="signup">Sign Up</button>
-        <p>Already have an account? <a href="signin.html">Sign In</a></p>
-      </form>
-    </div>
+  <div class="hero-content">
+  <h1>Sign Up</h1>
+  <form>
+    <input type="text" placeholder="Full Name" />
+    <input type="email" placeholder="Email" />
+    <input type="password" placeholder="Password" />
+    <input type="tel" placeholder="+965 12345678" />
+    <button type="submit" class="signup">Sign Up</button>
+    <p>Already have an account? <a href="#" class="signin">Sign In</a></p>
+  </form>
+</div>
   </div>
 </body>
 </html>
