--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 </head>
 <body>
   
-  <nav class="navbar">
-    <div class="navbar-left">
-      <span class="logo">Nestup</span>
-    </div>
-    <div class="navbar-right">
-      <a href="#">Home</a>
-      <a href="#">My courses</a>
-      <a href="#">Make a plan</a>
-      <a href="#">Help</a>
-      <button class="signin" onclick="location.href='signin.html'">Sign In</button>
-      <button class="signup" onclick="location.href='signup.html'">Sign Up</button>
-    </div>
-  </nav>
+<nav class="navbar">
+  <div class="navbar-left">
+    <a href="index.html">
+      <img src="nestup-logo.png" alt="Nestup Logo" class="logo-img">
+    </a>
+  </div>
+
+  <div class="navbar-right">
+    <a href="#">Home</a>
+    <a href="#">My courses</a>
+    <a href="#">Make a plan</a>
+    <a href="#">Help</a>
+    <button class="signin" onclick="location.href='signin.html'">Sign In</button>
+    <button class="signup" onclick="location.href='signup.html'">Sign Up</button>
+  </div>
+</nav>
 
   <header class="hero-section">
     <div class="hero-content">
