--- a/courses.html
+++ b/courses.html
@@ -9,8 +9,11 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="navbar-left">
-      <span class="logo">Nestup</span>
+  <div class="navbar-left">
+    <a href="index.html">
+      <img src="nestup-logo.png" alt="Nestup Logo" class="logo-img">
+    </a>
+  </div>
     </div>
     <div class="navbar-right">
       <a href="index.html">Home</a>
