--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </div>
 
   <div class="navbar-right">
-    <a href="#">Home</a>
-    <a href="#">My courses</a>
+    <a href="index.html">Home</a>
+    <a href="courses.html">My courses</a>
     <a href="#">Make a plan</a>
     <a href="#">Help</a>
     <button class="signin" onclick="location.href='signin.html'">Sign In</button>
