--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="navbar-right">
-    <a href="index.html">Home</a>
+    <a href="#">Home</a>
     <a href="courses.html">My courses</a>
     <a href="#">Make a plan</a>
     <a href="#">Help</a>
