--- a/courses.html
+++ b/courses.html
@@ -18,6 +18,7 @@
     <div class="navbar-right">
       <a href="index.html">Home</a>
       <a href="#">My Courses</a>
+      <a href="#">Make a plan</a>
       <a href="#">Help</a>
       <button class="signin" onclick="location.href='signin.html'">Sign In</button>
       <button class="signup" onclick="location.href='signup.html'">Sign Up</button>
