--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="navbar-right">
     <a href="index.html">Home</a>
     <a href="courses.html">My Courses</a>
-    <a href="ar-decor.html">AR Decor Studio</a> <!-- ✅ تم تصحيح الرابط هنا -->
+    <a href="ar.html">AR Decor Studio</a> <!-- ✅ تم تصحيح الرابط هنا -->
     <a href="#">Help</a>
     <button class="signin" onclick="location.href='signin.html'">Sign In</button>
     <button class="signup" onclick="location.href='signup.html'">Sign Up</button>
