--- a/ar.html
+++ b/ar.html
@@ -110,8 +110,9 @@
   <div class="navbar-right">
     <a href="index.html">Home</a>
     <a href="courses.html">My Courses</a>
-    <a href="ar-decor.html" class="active">AR Decor Studio</a>
+    <a href="ar.html" class="active">AR Decor Studio</a>
     <a href="#">Help</a>
+    <a href="membership.html" class="active">Memberships</a>
     <button class="signin" onclick="location.href='signin.html'">Sign In</button>
     <button class="signup" onclick="location.href='signup.html'">Sign Up</button>
   </div>
