--- a/courses.html
+++ b/courses.html
@@ -20,6 +20,7 @@
       <a href="#">My Courses</a>
       <a href="ar.html">AR Decor Studio</a> <!-- تعديل الرابط هنا -->
       <a href="#">Help</a>
+      <a href="membership.html" class="active">Memberships</a>
       <button class="signin" onclick="location.href='signin.html'">Sign In</button>
       <button class="signup" onclick="location.href='signup.html'">Sign Up</button>
     </div>
