--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a href="courses.html">My Courses</a>
     <a href="ar.html">AR Decor Studio</a> <!-- ✅ تم تصحيح الرابط هنا -->
     <a href="#">Help</a>
+    <a href="membership.html" class="active">Memberships</a>
     <button class="signin" onclick="location.href='signin.html'">Sign In</button>
     <button class="signup" onclick="location.href='signup.html'">Sign Up</button>
   </div>
