--- a/ar.html
+++ b/ar.html
@@ -155,7 +155,7 @@
     <span class="close" id="closeModal">&times;</span>
     <h3>Membership Required</h3>
     <p>This item is only available to premium members. Please subscribe to unlock access.</p>
-    <button onclick="location.href='signup.html'">Subscribe Now</button>
+    <button onclick="location.href='membership.html'">Subscribe Now</button>
   </div>
 </div>
 
