--- a/membership.html
+++ b/membership.html
@@ -16,8 +16,9 @@
   <div class="navbar-right">
     <a href="index.html">Home</a>
     <a href="courses.html">Courses</a>
-    <a href="ar-decor.html">AR Studio</a>
+    <a href="ar.html">AR Studio</a>
     <a href="#">Help</a>
+    <a href="membership.html">Memberships</a>
     <button onclick="location.href='signin.html'" class="signin">Sign In</button>
     <button onclick="location.href='signup.html'" class="signup">Sign Up</button>
   </div>
