--- a/courses.html
+++ b/courses.html
@@ -14,13 +14,12 @@
         <img src="nestup-logo.png" alt="Nestup Logo" class="logo-img">
       </a>
     </div>
-
     <div class="navbar-right">
       <a href="index.html">Home</a>
-      <a href="#">My Courses</a>
-      <a href="ar.html">AR Decor Studio</a> <!-- تعديل الرابط هنا -->
+      <a href="courses.html">My Courses</a>
+      <a href="ar.html">AR Decor Studio</a>
+      <a href="membership.html">Memberships</a>
       <a href="#">Help</a>
-      <a href="membership.html" class="active">Memberships</a>
       <button class="signin" onclick="location.href='signin.html'">Sign In</button>
       <button class="signup" onclick="location.href='signup.html'">Sign Up</button>
     </div>
@@ -34,43 +33,62 @@
   </header>
 
   <section class="courses-section">
-    <div class="course">
-      <h2>Introduction to Interior Design</h2>
+
+    <div class="course-card free">
+      <div class="course-header">
+        <h2>Introduction to Interior Design</h2>
+        <span class="course-badge free-badge">Free</span>
+      </div>
       <p>Start from the basics. Learn the foundations behind every great design, including color theory, lighting, balance, and proportion.</p>
       <p><strong>Level:</strong> Beginner &nbsp; | &nbsp; <strong>Duration:</strong> 4 weeks</p>
       <a href="#" class="learn-more">[Learn More]</a>
     </div>
 
-    <div class="course">
-      <h2>Design Software Courses</h2>
+    <div class="course-card premium">
+      <div class="course-header">
+        <h2>Design Software Courses</h2>
+        <span class="course-badge premium-badge">Premium</span>
+      </div>
       <p>Master the tools used by professionals. Practical courses in SketchUp, AutoCAD, Photoshop, and more.</p>
       <p><strong>Level:</strong> All Levels &nbsp; | &nbsp; <strong>Duration:</strong> Varies by software</p>
       <a href="#" class="learn-more">[Learn More]</a>
     </div>
 
-    <div class="course">
-      <h2>Space-Based Design Courses</h2>
+    <div class="course-card premium">
+      <div class="course-header">
+        <h2>Space-Based Design Courses</h2>
+        <span class="course-badge premium-badge">Premium</span>
+      </div>
       <p>Every space has a unique story. Learn how to design bedrooms, kitchens, offices, and commercial spaces with confidence.</p>
       <p><strong>Level:</strong> Intermediate &nbsp; | &nbsp; <strong>Duration:</strong> 5 weeks</p>
       <a href="#" class="learn-more">[Learn More]</a>
     </div>
 
-    <div class="course">
-      <h2>Design Styles & Aesthetics</h2>
+    <div class="course-card premium">
+      <div class="course-header">
+        <h2>Design Styles & Aesthetics</h2>
+        <span class="course-badge premium-badge">Premium</span>
+      </div>
       <p>Find your signature style. Explore popular design styles from modern and bohemian to classic and industrial — and how to implement them effectively.</p>
       <p><strong>Level:</strong> All Levels &nbsp; | &nbsp; <strong>Duration:</strong> 3 weeks</p>
       <a href="#" class="learn-more">[Learn More]</a>
     </div>
 
-    <div class="course">
-      <h2>Practical Project Courses</h2>
+    <div class="course-card premium">
+      <div class="course-header">
+        <h2>Practical Project Courses</h2>
+        <span class="course-badge premium-badge">Premium</span>
+      </div>
       <p>From concept to execution. Work on real-world projects step-by-step, and start building a professional design portfolio.</p>
       <p><strong>Level:</strong> Intermediate to Advanced &nbsp; | &nbsp; <strong>Duration:</strong> 6 weeks</p>
       <a href="#" class="learn-more">[Learn More]</a>
     </div>
 
-    <div class="course">
-      <h2>Essential Designer Skills</h2>
+    <div class="course-card premium">
+      <div class="course-header">
+        <h2>Essential Designer Skills</h2>
+        <span class="course-badge premium-badge">Premium</span>
+      </div>
       <p>Go beyond design. Learn how to deal with clients, price your services, use advanced tools like Revit, and apply sustainable design principles.</p>
       <p><strong>Level:</strong> Advanced &nbsp; | &nbsp; <strong>Duration:</strong> Varies</p>
       <a href="#" class="learn-more">[Learn More]</a>
@@ -90,6 +108,7 @@
       <h2>AR Decor Studio</h2>
       <p>An interactive tool where users can upload a photo of their room and try adding real furniture or decor elements. It helps visualize design ideas before making any real changes.</p>
     </div>
+
   </section>
 </body>
 </html>
