--- a/membership.html
+++ b/membership.html
@@ -15,8 +15,8 @@
   </div>
   <div class="navbar-right">
     <a href="index.html">Home</a>
-    <a href="courses.html">Courses</a>
-    <a href="ar.html">AR Studio</a>
+    <a href="courses.html">My Courses</a>
+    <a href="ar.html">AR Decor Studio</a>
     <a href="membership.html">Memberships</a>
     <a href="#">Help</a>
     <button onclick="location.href='signin.html'" class="signin">Sign In</button>
