--- a/membership.html
+++ b/membership.html
@@ -16,6 +16,7 @@
   <div class="navbar-right">
     <a href="index.html">Home</a>
     <a href="courses.html">My Courses</a>
+    <a href="NUgallery.html">Gallery</a>
     <a href="ar.html">AR Decor Studio</a>
     <a href="membership.html">Memberships</a>
     <a href="#">Help</a>
